<resources>

    <string name="app_name">WeatherApp</string>

<!-- header strings -->
    <string name="text_location">New York · America</string>
<!-- view weather conditions -->
    <string name="text_weather_conditions">Weather conditions</string>
<!-- view daily weather -->
    <string name="daily_weather">Daily weather</string>
<!-- view today's digest -->
    <string name="today_s_digest">Today\'s digest</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="daytime">Daytime</string>
    <string name="night_time">Night-time</string>
    <string name="humidity">Humidity</string>
    <string name="air_quality">air quality</string>
    <string name="chance_of_precipitation">chance of precipitation</string>
<!-- card views -->
    <string name="good_temp">good</string>
    <string name="aqi">aqi</string>
    <string name="precipitation">precipitation</string>
    <string name="edit">Edit</string>

    <!-- Days for recycler_view_weather -->
    <item name="monday" type="string">Monday</item>
    <item name="tuesday" type="string">Tuesday</item>
    <item name="wednesday" type="string">Wednesday</item>
    <item name="thursday" type="string">Thursday </item>
    <item name="friday" type="string">Friday</item>
    <item name="saturday" type="string">Saturday</item>
    <item name="sunday" type="string">Sunday</item>

<!-- location fragment -->
    <string name="location">location</string>
    <string name="add">+ Add</string>
    <string name="today_s_forecast">today\'s forecast</string>
    <string name="there_is_no_location">There is no location, click to \"+add\"</string>

<!-- set weather condition description -->
    <string name="clear">Clear sky, have a good time</string>
    <string name="mainly_clear">Mainly clear, partly cloudy, and overcast</string>
    <string name="fog">Fog and depositing rime fog</string>
    <string name="drizzle">Drizzle: Light, moderate, and dense intensity</string>
    <string name="freezing_drizzle">Freezing Drizzle: Light and dense intensity</string>
    <string name="rain">Rain: Slight, moderate and heavy intensity</string>
    <string name="freezing_rain">Freezing Rain: Light and heavy intensity</string>
    <string name="snow_fall">Snow fall: Slight, moderate, and heavy intensity</string>
    <string name="snow_grains">Snow grains expected, enjoy this!</string>
    <string name="rain_showers">Rain showers: Slight, moderate, and violent</string>
    <string name="snow_showers">Snow showers slight and heavy</string>
    <string name="thunderstorm">Thunderstorm: Slight or moderate</string>
    <string name="thunderstorm_rain">Thunderstorm: Slight or moderate</string>
    <string name="error">Can\'t provide a likely prognosis at this time </string>

<!-- set weather condition daytime and night time description -->
    <string name="clear_digest">Clear sky</string>
    <string name="mainly_clear_digest">Mainly clear</string>
    <string name="fog_digest">Fog weather</string>
    <string name="drizzle_digest">Drizzle weather</string>
    <string name="freezing_drizzle_digest">Freezing Drizzle</string>
    <string name="rain_digest">Rain weather</string>
    <string name="freezing_rain_digest">Freezing Rain</string>
    <string name="snow_fall_digest">Snow fall</string>
    <string name="snow_grains_digest">Snow grains</string>
    <string name="rain_showers_digest">Rain showers</string>
    <string name="snow_showers_digest">Snow showers</string>
    <string name="thunderstorm_digest">Thunderstorm weather</string>
    <string name="thunderstorm_rain_digest">Thunderstorm moderate</string>
    <string name="error_digest">Can\'t provide</string>
    
<!-- set aqi description -->
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="moderate">Moderate</string>
    <string name="poor">Poor</string>
    <string name="very_poor">Very poor</string>
    <string name="highly_poor">Highly poor</string>
    <string name="error_aqi">Error</string>


<!-- button words -->
    <string name="enter_location">Enter location :</string>
    <string name="new_york_america">New-York, America</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="remove_this_location">Remove this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>


</resources>