<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_enter_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/enter_location"
        android:letterSpacing="0.1"
        android:textAppearance="@style/TextAppearance.General_grey"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_enter_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_enter_location"
        android:layout_alignStart="@id/text_enter_location"
        android:layout_alignEnd="@id/text_enter_location"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:hint="@string/new_york_america"
        android:textSize="15sp"
        android:gravity="center" />

    <Button
        android:id="@+id/button_enter"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/edit_enter_location"
        android:layout_alignStart="@id/edit_enter_location"
        android:layout_marginTop="70dp"
        android:text="@string/enter"
        android:background="@drawable/round_button"
        android:letterSpacing="0.1"
        android:textAppearance="@style/TextAppearance.General_black"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/edit_enter_location"
        android:layout_alignTop="@id/edit_enter_location"
        android:layout_marginTop="70dp"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.General_black"
        android:background="@drawable/round_button"
        android:letterSpacing="0.1" />


</RelativeLayout>