<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/screenBackground"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_delete_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:text="@string/remove_this_location"
        android:letterSpacing="0.1"
        android:textColor="?attr/textColorBlack"
        android:textAppearance="@style/TextAppearance.General_grey"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_yes"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/text_delete_location"
        android:layout_alignStart="@id/text_delete_location"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/yes"
        android:textColor="?attr/textColorBlack"
        android:background="@drawable/round_button"
        android:letterSpacing="0.1"
        android:textAppearance="@style/TextAppearance.General_black"/>

    <Button
        android:id="@+id/button_no"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/text_delete_location"
        android:layout_alignTop="@id/text_delete_location"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="?attr/textColorBlack"
        android:text="@string/no"
        android:textAppearance="@style/TextAppearance.General_black"
        android:background="@drawable/round_button"
        android:letterSpacing="0.1" />

</RelativeLayout>