<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background"
    android:orientation="vertical">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/motion_appTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@color/general_background"
        app:layoutDescription="@xml/motion_app_top_bar"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <TextView
            android:id="@+id/text_location_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/text_location"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="147dp"
            tools:layout_editor_absoluteY="16dp" />

        <ImageView
            android:id="@+id/imageSun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_sun"
            tools:layout_editor_absoluteY="84dp" />

        <ImageView
            android:id="@+id/imageSky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_sky_light"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="105dp" />

        <TextView
            android:id="@+id/text_current_temperature_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/staatliches_regular"
            android:text="12"
            android:textColor="@color/black"
            android:textScaleX="2"
            android:textSize="65sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="313dp" />

        <TextView
            android:id="@+id/text_datetime_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/staatliches_regular"
            android:paddingBottom="13dp"
            android:text="6-16"
            android:textColor="@color/grey"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="195dp"
            tools:layout_editor_absoluteY="353dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            />

    </androidx.constraintlayout.motion.widget.MotionLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@id/card_view_weather_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/staatliches_regular"
                android:text="@string/text_weather_conditions"
                android:textColor="@color/color_weather_condition"
                android:textSize="16sp" />

            <TextView
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="46dp"
                android:fontFamily="@font/staatliches_regular"
                android:paddingBottom="16dp"
                android:text="It won't rain for the next two hours, so you don't have to worry about going outside"
                android:textColor="@color/color_weather_condition"
                android:textSize="12sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_daily_weather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_weather_conditions">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_daily_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/staatliches_regular"
                    android:text="@string/daily_weather"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_weather"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_today_digest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_daily_weather">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/today_s_digest"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/staatliches_regular"
                    android:textColor="@color/grey"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/text_sunrise_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="298dp"
                    android:layout_marginTop="85dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/staatliches_regular"
                    android:text="11:33"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/text_sunrise"
                    app:layout_constraintStart_toStartOf="@id/text_sunrise_time"
                    app:layout_constraintTop_toBottomOf="@id/text_sunrise_time"
                    app:layout_constraintEnd_toEndOf="@id/text_sunrise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunrise"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/staatliches_regular"
                    android:textColor="@color/grey"
                    android:textSize="10sp"/>

                <TextView
                    android:id="@+id/text_sunset_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="85dp"
                    android:layout_marginRight="16dp"
                    android:text="19:15"
                    android:textColor="@color/black"
                    android:fontFamily="@font/staatliches_regular"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/text_sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/text_sunset_time"
                    app:layout_constraintTop_toBottomOf="@id/text_sunset_time"
                    app:layout_constraintEnd_toEndOf="@id/text_sunset_time"
                    android:text="@string/sunset"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/staatliches_regular"
                    android:textColor="@color/grey"
                    android:textSize="10sp"/>

                <com.sidukov.weatherapp.ui.CustomProgressBar
                    android:id="@+id/custom_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/text_sunrise_time"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>